adding jwt and needed security

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+bezkoder.app.jwtCookieName= helpchef
+bezkoder.app.jwtSecret= HelpChefSecretKey
+# 1 godzina
+bezkoder.app.jwtExpirationMs= 3600000
